Peril.Api/Content/peril.css
/* ... */
        
        #message.show{
            opacity: 1;
        }

        #message.hide{
            opacity: 0;
        }
        
    /* Browser */
        #browser{
            position: relative;
            display: inline-block;
            
            width: 800px;
            
            left: 50%;
            margin-left:-400px;
            
            padding: 50px;
        }
        
    /* Content Boxes */
        .boxContainer{
            position: relative;
            display: flex;
        }
        
        .box{
            position: relative;
            display: inline-block;
            
            flex: 1;
            
            padding:10px;
        }
        
        .box.button{
            margin: 10px;
            padding: 10px;
            
            cursor: pointer;
        }
        
        .box.button:first-of-type{
            margin-left:0px;
        }
        
        .box.button:last-of-type{
            margin-right:0px;
        }
        
        .box.button:hover{
            box-shadow: 0 0 5px rgba(255, 255, 255, 1);
        }
        
    /* Overlay */
        #overlay{
            position: fixed;
            display: flex;
            z-index: 2;
            
            align-items: center;
            justify-content: center;
            
            height:100%;
            width:100%;
            
            min-width: 800px;
            
            top: 0px;
            left: 0px;
            
            opacity: 0;
            
            background: rgba(0,0,0,0.75);
            
            transition: opacity 0.5s ease-out;
            transition: background 1.5s ease-out;
        }
        
        #overlay.hide{
            display: none;
            opacity: 0;
        }
        
        #overlay.show{
            display: flex;
            opacity: 1;
        }
        
        #overlay.blackout{
            background: rgba(0,0,0,1);
        }
        
        #overlayContent{
            display: block;
            
            padding: 50px;
            margin: 50px;
            
            border-radius:25px;
            background:rgba(100, 100, 100, 1);
        }
        
    /* Menu */
        #menu{
            position:fixed;
            
            height:50px;
            width:50px;
            
            bottom:25px;
            right:25px;
            
            cursor: pointer;
            overflow:hidden;
            
            background-color: rgba(0, 0, 0, 0.5);
            background-image: url('images/settings.png');
            background-repeat: no-repeat;
            background-position: bottom left;
            
            transition: height 0.25s ease-out;
        }
        
        #menu:hover{
            height:150px;
        }
        
        #menu:hover > .menuButton{
            opacity: 1;
        }
        
        .menuButton{
            position:relative;
            display:block;
            
            height:50px;
            width:50px;
            
            opacity: 0;
            
            background-color: rgba(0, 0, 0, 0.5);
            
            transition: opacity 0.25s ease-out;
        }
        
        .menuButton:hover{
            background-color: rgba(150, 150, 150, 0.5);
        }
        
/* Player Colours */
    .attack-future {
        fill-opacity: 0.2;
    }

    .player-, g{
        background-color: rgba(150, 150, 150, 1);
        fill: rgba(150, 150, 150, 0.75);

        stroke: black;
        color: white;
    }
    
    .player-0{
        background-color:rgba(24, 24, 24, 1);
        fill:rgba(24, 24, 24, 1);
        
        stroke: black;
        color: white;
    }

    .attack-player-0 {
        fill: rgba(24, 24, 24, 1);
    }
    
    .player-1{
        background-color:rgba(65, 105, 225, 1);
        fill:rgba(65,105,225,1);
        
        stroke: black;
        color:White;
    }

    .attack-player-1{
        fill: rgba(65, 105, 225, 1);
    }
    
    .player-2{
        background-color:rgba(34, 139, 34, 1);
        fill:rgba(34,139,34,1);
        
        stroke: black;
        color:White;
    }

    .attack-player-2{
        fill: rgba(34, 139, 34, 1);
    }
    
    .player-3{
        background-color:rgba(178, 34, 34 , 1);
        fill:rgba(178,34,34 ,1);
        
        stroke: black;
        color:White;
    }

    .attack-player-3{
        fill: rgba(178, 34, 34 , 1);
    }
    
    .player-4{
        background-color:rgba(255, 165, 0, 1);
        fill:rgba(255,165,0 ,1);
        
        stroke: black;
        color:White;
    }

    .attack-player-4{
        fill: rgba(255, 165, 0, 1);
    }
    
    .player-5{
        background-color:rgba(239, 239, 0, 1);
        fill:rgb(203, 203, 0);
        
        stroke: black;
        color:Black;
    }

    .attack-player-5{
        fill: rgba(203, 203, 0, 1);
    }

    .player-6{
        background-color:rgba(128, 0, 128, 1);
        fill:rgba(128, 0, 128, 1);
        
        stroke: black;
        color:White;
    }

    .attack-player-6{
        fill: rgba(128, 0, 128, 1);
    }
    
    .player-7{
        background-color:rgba(255, 105, 180, 1);
        fill:rgba(255, 105, 180, 1);
        
        stroke: black;
        color:White;
    }

    .attack-player-7{
        fill :rgba(255, 105, 180, 1);
    }
    
    .player-8{
        background-color:rgba(248, 248, 255, 1);
        fill:rgba(248, 248, 255, 1);
        
        stroke: black;
        color: black;
    }

    .attack-player-8{
        fill: rgba(248, 248, 255, 1);
    }
    
    .player-9{
        background-color:rgba(255, 69, 0, 1);
        fill:rgba(255, 69, 0, 1);
        
        stroke: black;
        color:White;
    }

    .attack-player-9{
        fill: rgba(255, 69, 0, 1);
    }
    
    .player-10{
        background-color:rgba(173, 255, 47, 1);
        fill:rgba(173, 255, 47, 1);
        
        stroke: black;
        color:Black;
    }
/* ... */

